[package]
name = 'sha3pow'
version = "3.0.0"
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'Sha3-based Proof of Work algorithms for Substrate'
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
sha3 = "0.10.6"

# Substrate packages
sc-consensus-pow = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-api = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-consensus-pow = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-runtime = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
