[package]
authors = ['Anonymous']
edition = '2021'
name = 'sha3-pow'
version = '4.0.0-dev'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sha3 = { version="0.10.6" }
rand = { version = "0.8.5", features = ["small_rng"] }
sp-api = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-consensus-pow = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-blockchain = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-runtime = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-consensus = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-consensus-pow = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-client-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-application-crypto = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
