[package]
name = "pallet-pbft"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for GRANDPA finality gadget"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

sp-application-crypto = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

sp-finality-pbft = { version = "0.1.0", default-features = false, path = "../../primitives/finality-pbft" }

sp-io = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-session = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-std = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-runtime = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-staking = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-benchmarking = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git", optional = true }
frame-support = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-system = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-authorship = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-session = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
grandpa = { package = "finality-grandpa", version = "0.15.0", features = ["derive-codec"] }

sp-keyring = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-balances = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-offences = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-staking = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-staking-reward-curve = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-timestamp = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-election-provider-support = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-finality-pbft/std",
	"sp-session/std",
	"sp-std/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"log/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
