[package]
name = "pow"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = ""
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "pow"

[dependencies]
futures = '0.3.4'
rand = { version = "0.7.2", features = ["small_rng"] }
sha3 = "0.8.0"
structopt = '0.3.8'
clap = { version = "4.0.9", features = ["derive"] }

sc-basic-authorship = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-cli = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-client-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-consensus = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-consensus-pow = {git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-executor = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-network = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-service = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-transaction-pool = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-blockchain = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-consensus = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-inherents = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-timestamp = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-transaction-pool = {git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
# local packages
sha3pow = { path = '../../sha3pow' }
pow-runtime = { path = "../../runtime/pow" }

sc-telemetry = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-keystore = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-transaction-pool-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-runtime = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-keyring = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-system = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-transaction-payment = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git", default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-rpc-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-block-builder = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
substrate-frame-rpc-system = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-transaction-payment-rpc = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-benchmarking-cli = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}



# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git", optional = true}

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
