[package]
name = "pow"
version = "4.0.0-dev"
description = "Only PoW"
authors = ["Re-edited by Nam "]
homepage = ""
edition = "2021"
license = "Unlicense"
publish = false
repository = ""
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "pow"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.25" ## Change Here

sc-cli = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-executor = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-service = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-telemetry = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-keystore = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-keystore = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-transaction-pool = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-transaction-pool-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-consensus-pow = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"} ## Change Here
sp-consensus-pow = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"} ## Change Here
sp-consensus = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-consensus = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-client-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-runtime = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-timestamp = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-inherents = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-keyring = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

frame-system = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-transaction-payment = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git", default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-rpc-api = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-blockchain = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-block-builder = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sc-basic-authorship = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
substrate-frame-rpc-system = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-transaction-payment-rpc = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-benchmarking-cli = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

# Local Dependencies
pow-runtime = { path = "../../runtime/pow-runtime" }
sha3-pow = {version = "4.0.0-dev", path = "./sha3pow"} ## Change Here

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git", optional = true}

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"pow-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["pow-runtime/try-runtime", "try-runtime-cli"]
