[package]
edition = "2021"
name = "pallet-difficulty"
authors = ["Re-edited by Nam "]
version = "4.0.0-dev"
license = "Unlicense"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-system = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

[dev-dependencies]
serde = { version = "1.0.126" }
sp-io = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std"
]
