[package]
name = "pallet-rewards"
version = "4.0.0-dev"
edition = "2021"
authors = ["Re-edited by Nam "]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-system = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-balances = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-runtime = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-consensus-pow = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-authorship = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-authorship/std",
	"sp-runtime/std",
	"sp-consensus-pow/std",
	"sp-core/std"
]
