[package]
name = "pow-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-original/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }

pallet-balances = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-executive = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-support = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
frame-system = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-api = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-block-builder = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-core = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-inherents = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-io = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-offchain = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-runtime = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-session = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-std = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-transaction-pool = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
sp-version = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-sudo = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-timestamp = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}
pallet-transaction-payment = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

# Local Dependencies
ea4healthcare = { default-features = false, path = "../../pallets/ea4healthcare" }

[build-dependencies]
substrate-wasm-builder = { default-features = false, git = "https://github.com/namng1012/Polkadot-Package-9-32.git"}

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"pallet-balances/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-randomness-collective-flip/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"ea4healthcare/std",
]
